[gd_scene load_steps=16 format=3 uid="uid://d24ay6oxa4o2b"]

[ext_resource type="Script" path="res://Enemys/Scripts/SkeletonWarrior1.gd" id="1_dawq2"]
[ext_resource type="PackedScene" uid="uid://bc7mvdej3kxed" path="res://addons/kaykit_character_pack_skeletons/Characters/gltf/Skeleton_Warrior.glb" id="1_pkolj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0lu0r"]
height = 2.57292

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_d4f53"]
input_0/name = "Seguir"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "Atacar"
input_1/auto_advance = false
input_1/reset = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_froti"]
animation = &"Unarmed_Melee_Attack_Punch_A"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_wo5o6"]
allow_transition_to_self = true
input_0/name = "Pasivo"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "Violento"
input_1/auto_advance = false
input_1/reset = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_aq6ii"]
animation = &"Unarmed_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gn7ee"]
animation = &"Running_A"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_mxthx"]
graph_offset = Vector2(-578.202, 52.9452)
nodes/Acciones/node = SubResource("AnimationNodeTransition_d4f53")
nodes/Acciones/position = Vector2(-100, 280)
nodes/Ataque1/node = SubResource("AnimationNodeAnimation_froti")
nodes/Ataque1/position = Vector2(-460, 380)
nodes/Estados/node = SubResource("AnimationNodeTransition_wo5o6")
nodes/Estados/position = Vector2(140, 160)
nodes/Idle/node = SubResource("AnimationNodeAnimation_aq6ii")
nodes/Idle/position = Vector2(-140, 120)
nodes/Run/node = SubResource("AnimationNodeAnimation_gn7ee")
nodes/Run/position = Vector2(-340, 240)
node_connections = [&"output", 0, &"Estados", &"Acciones", 0, &"Run", &"Acciones", 1, &"Ataque1", &"Estados", 0, &"Idle", &"Estados", 1, &"Acciones"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jt6sr"]
size = Vector3(15, 5, 15)

[sub_resource type="CanvasTexture" id="CanvasTexture_q5sog"]

[sub_resource type="Gradient" id="Gradient_0inom"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.321569, 0.145098, 0.0470588, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_yri87"]
gradient = SubResource("Gradient_0inom")

[sub_resource type="ViewportTexture" id="ViewportTexture_h3mp7"]
viewport_path = NodePath("SubViewport")

[sub_resource type="BoxShape3D" id="BoxShape3D_sjs20"]
size = Vector3(1.31202, 2.51038, 1.85923)

[node name="SkeletonWarrior1" type="CharacterBody3D"]
script = ExtResource("1_dawq2")

[node name="Skeleton_Warrior" parent="." instance=ExtResource("1_pkolj")]

[node name="Skeleton3D" parent="Skeleton_Warrior/Rig" index="0"]
bones/1/position = Vector3(-0.0278006, 0.384249, 0.042289)
bones/1/rotation = Quaternion(0.0407811, -0.101635, -0.00416989, 0.993977)
bones/4/position = Vector3(0.220213, 0.134132, 0.0397037)
bones/4/rotation = Quaternion(-0.872712, -0.322923, -0.365012, 0.0293237)
bones/5/rotation = Quaternion(2.84944e-08, -1.93153e-08, -0.741821, 0.670598)
bones/6/rotation = Quaternion(-9.73784e-11, -2.98437e-10, 0.0266581, 0.999645)
bones/7/rotation = Quaternion(-0.178062, -0.252424, -0.0769881, 0.947971)
bones/8/rotation = Quaternion(1.60975e-09, 1.60975e-09, -0.707107, 0.707107)
bones/9/rotation = Quaternion(-0.674299, 0.346834, 0.632379, 0.158508)
bones/10/rotation = Quaternion(5.18252e-08, 1.01725e-08, 0.642767, 0.766062)
bones/11/rotation = Quaternion(-9.73784e-11, 2.98437e-10, -0.0266581, 0.999645)
bones/12/rotation = Quaternion(-0.144827, 0.282948, 0.14289, 0.937309)
bones/13/rotation = Quaternion(1.60973e-09, -1.60973e-09, 0.707107, 0.707107)
bones/14/rotation = Quaternion(1.87083e-09, 0.0934669, 5.84636e-09, 0.995622)
bones/16/rotation = Quaternion(0.962318, 0.0737579, -0.102564, 0.240801)
bones/17/rotation = Quaternion(0.343358, 6.73555e-08, -2.34837e-07, 0.939205)
bones/18/rotation = Quaternion(-0.496573, -0.0726224, 0.0308694, 0.864401)
bones/19/rotation = Quaternion(6.31671e-06, 0.920305, -0.391203, -1.351e-06)
bones/20/rotation = Quaternion(0.986657, -0.0469047, -0.141133, 0.0662546)
bones/21/rotation = Quaternion(0.271905, -6.36293e-08, 1.80287e-07, 0.962324)
bones/22/rotation = Quaternion(-0.529097, 0.405612, 0.00267627, 0.745337)
bones/23/rotation = Quaternion(-0.000412272, 0.920149, -0.391569, 9.33892e-05)
bones/24/rotation = Quaternion(0.707107, -2.29302e-07, -4.60552e-08, 0.707107)
bones/25/position = Vector3(0.213918, 0.0259903, 0.246842)
bones/25/rotation = Quaternion(-0.705092, 0.0533355, 0.0533355, 0.705092)
bones/26/position = Vector3(-0.0226521, 0.213959, -2.10671e-15)
bones/26/rotation = Quaternion(7.10544e-15, -1.38321e-22, 1, -2.33983e-34)
bones/27/rotation = Quaternion(-1.04035e-07, 0.391084, 0.920355, -2.9526e-08)
bones/29/rotation = Quaternion(1, -3.10863e-15, 1.94707e-07, -6.91739e-22)
bones/31/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/32/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/33/rotation = Quaternion(-2.12535e-08, 5.23449e-09, 0.930863, 0.365368)
bones/34/rotation = Quaternion(-1.04035e-07, 0.391084, 0.920355, -2.95261e-08)
bones/36/rotation = Quaternion(1, -5.43974e-09, 1.96646e-07, -7.45058e-09)
bones/38/position = Vector3(1.08655, 0.187603, 0.864882)
bones/39/position = Vector3(0.394, 1.02501, 0.437764)
bones/39/rotation = Quaternion(0.301671, 0.656038, 0.356326, 0.592993)
bones/40/position = Vector3(-0.971873, 0.321973, 0.047419)
bones/41/position = Vector3(-0.476093, 0.929883, 0.312916)
bones/41/rotation = Quaternion(-0.396089, 0.565425, 0.517798, -0.505266)

[node name="Skeleton_Warrior_Helmet" parent="Skeleton_Warrior/Rig/Skeleton3D" index="0"]
transform = Transform3D(0.999862, 4.70766e-11, -0.0165847, -0.0013586, 0.996639, -0.0819074, 0.016529, 0.0819186, 0.996502, -0.0278006, 1.19174, 0.10866)
bone_idx = 15

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.24506, 0)
shape = SubResource("CapsuleShape3D_0lu0r")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_mxthx")
anim_player = NodePath("../Skeleton_Warrior/AnimationPlayer")
active = true
parameters/Acciones/current_state = "Atacar"
parameters/Acciones/transition_request = "Seguir"
parameters/Acciones/current_index = 1
parameters/Estados/current_state = "Pasivo"
parameters/Estados/transition_request = ""
parameters/Estados/current_index = 0

[node name="RangoVision" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)

[node name="Area" type="CollisionShape3D" parent="RangoVision"]
shape = SubResource("BoxShape3D_jt6sr")

[node name="nombreLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.72505, 0.113462)
modulate = Color(0, 0, 0, 1)
outline_modulate = Color(1, 1, 1, 1)
text = "Nombre del NPC"
font_size = 80

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2i(300, 70)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="ExperienciaPJ" type="TextureProgressBar" parent="SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
value = 50.0
nine_patch_stretch = true
texture_under = SubResource("CanvasTexture_q5sog")
texture_progress = SubResource("GradientTexture1D_yri87")

[node name="BarraSalud" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0)
texture = SubResource("ViewportTexture_h3mp7")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.75
debug_enabled = true

[node name="RangoAtaque" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RangoAtaque"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15039, 0.666527)
shape = SubResource("BoxShape3D_sjs20")

[node name="tiempoAtaques" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="animation_started" from="AnimationTree" to="." method="_on_animation_tree_animation_started"]
[connection signal="body_entered" from="RangoVision" to="." method="_on_rango_vision_body_entered"]
[connection signal="body_exited" from="RangoVision" to="." method="_on_rango_vision_body_exited"]
[connection signal="body_entered" from="RangoAtaque" to="." method="_on_rango_ataque_body_entered"]
[connection signal="body_exited" from="RangoAtaque" to="." method="_on_rango_ataque_body_exited"]
[connection signal="timeout" from="tiempoAtaques" to="." method="_on_tiempo_ataques_timeout"]

[editable path="Skeleton_Warrior"]
